# CruzPlus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/Modules/: FindGLM.cmake
src/: CMakeLists.txt  CruZPlus.GameEngine.cpp  CruZPlus.GameEngine.h
src/CruZPlus/: BodyFactory.cpp  BodyFactory.h  CMakeLists.txt  Configure.h  Configure.h.in  Conversion.h  DebugUltility.h  Game.cpp  Game.h  GameEntity.h  IRender.h  IUpdate.h  Input.cpp  Input.h  Instances.cpp  Instances.h  Memory.h  Physic.cpp  Physic.h  Settings.h  TextureManager.cpp  TextureManager.h  main.cpp  sokol_impl.cpp
src/CruZPlus/Editor/: Board.cpp  Board.h  CMakeLists.txt  EditorUI.cpp  EditorUI.h
src/CruZPlus/GameEntity/: Bullet.cpp  Bullet.h  Entity.cpp  Entity.h  EntityWorld.cpp  EntityWorld.h  IRender.h  SpaceShip.cpp  SpaceShip.h
src/CruZPlus/GameEntity/Physic/: PhysicComponent.cpp  PhysicComponent.h
src/CruZPlus/Graphic/: AnimatedSprite.cpp  AnimatedSprite.h  SpriteSheet.cpp  SpriteSheet.h
src/CruZPlus/Helper/: TimeHelper.h
src/CruZPlus/Memory/: BlockAllocator.cpp  BlockAllocator.h  TexutureManager.cpp  TexutureManager.h
src/CruZPlus/Physic/: ContactListenerHandler.cpp  ContactListenerHandler.h  DebugDraw.cpp  DebugDraw.h  PhysicComponent.cpp
src/SpaceShooter/: Bullet.cpp  Bullet.h  CMakeLists.txt  Settings.h  SpaceShip.cpp  SpaceShip.h  main.cpp
src/SpaceShooter/GameObjects/: Bullet.cpp  Bullet.h  EnemyShip.h  PlayerShip.cpp  PlayerShip.h  SpaceShip.cpp  SpaceShip.h
